--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "nuxt": "3.0.0"
   },
   "dependencies": {
-    "@prisma/client": "^4.9.0",
-    "firebase-admin": "^11.4.1"
+    "@prisma/client": "^4.9.0"
   }
 }
