--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "nuxt": "3.0.0"
   },
   "dependencies": {
-    "@prisma/client": "^4.9.0"
+    "@prisma/client": "^4.9.0",
+    "@vercel/analytics": "^0.1.8"
   }
 }
